--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,8 @@
     "buffer": "^5.6.0",
     "child-process": "^1.0.2",
     "child_process": "^1.0.2",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "nodemon": "^2.0.3"
   }
 }
